[package]
name = "fft-convolver"
version = "0.2.0"
edition = "2021"
authors = ["Stephan Eckes <stephan@neodsp.com>"]
description = "Audio convolution algorithm in pure Rust for real time audio processing"
repository = "https://github.com/neodsp/fft-convolver"
license = "MIT"
keywords = ["audio", "filter", "convolution", "fft", "dsp"]
categories = ["multimedia::audio"]
readme = "README.md"
homepage = "https://neodsp.com/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realfft = "3.3.0"
rustfft = "6.2.0"
thiserror = "1.0.63"
num = "0.4.3"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "fft-convolver"
harness = false
