[package]
name = "fft-convolver"
version = "0.3.0"
edition = "2024"
authors = ["Stephan Eckes <stephan@neodsp.com>"]
description = "Audio convolution algorithm in pure Rust for real time audio processing"
repository = "https://github.com/neodsp/fft-convolver"
license = "MIT"
keywords = ["audio", "filter", "convolution", "fft", "dsp"]
categories = ["multimedia::audio"]
readme = "README.md"
homepage = "https://neodsp.com/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realfft = "3.5.0"
rustfft = "6.4.1"
thiserror = "2.0"
num = "0.4.3"
